<resources>
    <string name="app_name">Fragment_M</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resoult">Resultado</string>
    <string name="btngo">Go!</string>
    <string name="titulo">Lista de la Compra</string>
    <string name="hint_articulo">Artículo</string>
    <string name="hint_precio">Precio</string>
    <string name="btn_add">Añadir</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_volver">Volver</string>
</resources>